# FEUP-MPCP

sheet-4/11d/: CMakeLists.txt  exercise.s  main.c
sheet-4/3e/: exercise.s  main.c
sheet-4/4b/: exercise.s  main.c
sheet-4/5a/: CMakeLists.txt  exercise.s  main.c
sheet-4/5c/: CMakeLists.txt  exercise.s  main.c
sheet-4/6a/: CMakeLists.txt  exercise.s  main.c
sheet-4/9a/: CMakeLists.txt  exercise.s  main.c
sheet-5/5a/: exercise.s  main.c
sheet-6/1a/: CMakeLists.txt  exercise.s  main.c
sheet-6/1b/: CMakeLists.txt  exercise.s  main.c
sheet-6/2a/: CMakeLists.txt  exercise.s  main.c
sheet-6/2b/: CMakeLists.txt  exercise.s  main.c
sheet-6/2c/: CMakeLists.txt  exercise.s  main.c
sheet-7/5/: CMakeLists.txt  exercise.s  main.c
sheet-7/6/: CMakeLists.txt  exercise.s  main.c
sheet-7/9/: CMakeLists.txt  exercise.s  main.c
weekly/1/: CMakeLists.txt  checkabs.s  main.c  sumf.s
weekly/2/: CMakeLists.txt  main.c  selecteduppercase.s
weekly/3/: CMakeLists.txt  main.c  ocorr.s  opmat.s
weekly/4/: CMakeLists.txt  closestcircle.s  main.c
weekly/5/: CMakeLists.txt  histo.s  main.c
